# WorldofWarcraftVODUploader

./: .gitignore  README.md  config.yaml  dev-requirements.txt  pyproject.toml  requirements.txt
src/: config.py  constants.py  logger.py  main.py  uploader.py  video.py  watcher.py
tests/: test_config.py  test_main.py  test_uploader.py  test_video.py  test_watcher.py
uploaders/: __init__.py  youtube.py
