[tool.poetry]
name = "youtube-uploader"
version = "0.1.0"
description = "An automated script that watches a directory and uploads files to a specified YouTube channel using the YouTube API."
authors = ["Notey <info@notey.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-auth = "^2.6.0"
google-auth-oauthlib = "^0.4.6"
google-api-python-client = "^2.31.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"