[tool.poetry]
name = "youtube-uploader"
version = "0.0.2"
description = "A World of Warcraft app that automatically uploads WarcraftRecorder vods to YouTube"
authors = ["Notey <info@notey.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-auth = "^2.6.0"
google-auth-oauthlib = "^0.4.6"
google-api-python-client = "^2.31.0"
dynaconf = "^3.2.6"
pydantic = "^2.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"