[tool.poetry]
name = "world-of-warcraft-vod-uploader"
version = "1.0.1"
description = "A World of Warcraft app that automatically uploads WarcraftRecorder vods to YouTube"
authors = ["Notey <info@notey.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-auth = "^2.6.0"
google-auth-oauthlib = "^0.4.6"
google-api-python-client = "^2.31.0"
dynaconf = "^3.2.6"
pydantic = "^2.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"